--- a/package.json
+++ b/package.json
@@ -71,18 +71,23 @@
     "@electron-forge/plugin-webpack": "6.0.0-beta.57",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
     "@tailwindcss/postcss7-compat": "^2.1.4",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
-    "@typescript-eslint/parser": "^4.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
     "autoprefixer": "^10.2.6",
     "css-loader": "^5.0.0",
     "electron": "13.1.2",
-    "eslint": "^7.6.0",
+    "eslint": "^7.28.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
     "fork-ts-checker-webpack-plugin": "^6.0.1",
     "node-loader": "^2.0.0",
     "postcss": "^8.3.1",
     "postcss-loader": "^5.3.0",
+    "prettier": "^2.3.1",
     "style-loader": "^2.0.0",
+    "stylelint-config-recommended": "^5.0.0",
     "tailwindcss": "^2.1.4",
     "ts-loader": "^9.2.2",
     "typescript": "^4.0.2"
@@ -90,6 +95,7 @@
   "dependencies": {
     "@craco/craco": "^6.1.2",
     "@headlessui/react": "^1.2.0",
+    "@hot-loader/react-dom": "^17.0.1",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
     "electron-squirrel-startup": "^1.0.0",
