--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "@reduxjs/toolkit": "^1.6.0",
     "@tailwindcss/forms": "^0.3.3",
     "@treverix/custom-electron-titlebar": "^4.1.7",
+    "@types/lodash": "^4.14.172",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.16",
@@ -122,11 +123,13 @@
     "framer-motion": "^4.1.17",
     "heroicons": "^1.0.1",
     "is-electron": "^2.2.0",
+    "lodash": "^4.17.21",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "python-shell": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.4",
     "react-hook-form": "^7.9.0",
     "react-hot-loader": "^4.13.0",
     "react-onclickoutside": "^6.11.2",
